--- a/pages/utilities/register_project.html
+++ b/pages/utilities/register_project.html
@@ -1,4 +1,4 @@
-<div class="test-field">
+<!-- <div class="test-field">
     <div class="note-field">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi consequuntur nulla officia
         exercitationem quaerat totam dignissimos accusantium. Eveniet reiciendis, harum fugiat adipisci
@@ -57,7 +57,7 @@
         deserunt delectus recusandae, ipsa totam explicabo.
 
     </div>
-</div>
+</div> -->
 
 <div class="form">
     <h2>Đơn đăng ký đồ án tốt nghiệp</h2>
@@ -81,7 +81,7 @@
 
         <div class="input-field">
             <div class="enter"><label for="project-name">Keyword:</label></div>
-            <input type="text" id="project-name" name="project-name" placeholder="Nhập tên đồ án"
+            <input type="text" id="project-keyword" name="project-keyword" placeholder="Nhập keyword"
                 required>
         </div>
 
@@ -93,7 +93,13 @@
 
         <div class="input-field">
             <div class="enter"><label for="project-name">Outcome:</label></div>
-            <textarea id="message" name="message" rows="4" cols="50" placeholder="Nhập mô tả"
+            <textarea id="outcome" name="outcome" rows="4" cols="50" placeholder="Nhập mô tả"
+                required></textarea>
+        </div>
+        
+        <div class="input-field">
+            <div class="enter"><label for="project-name">Giảng viên dự kiến:</label></div>
+            <textarea id="proposed-lecturer" name="proposed-lecturer" rows="4" cols="50" placeholder="Nhập tên giảng viên dự kiến"
                 required></textarea>
         </div>
 
